syntax = "proto3";
package protos;

message ContractAttributes{
     string name = 1;
     string start_timestamp = 2; //int64
     string end_timestamp = 3;
}

message ContractSignature{
     string owner_pubkey = 1;
     string signature = 2;
     string timestamp = 3;

}

import "google/protobuf/any.proto";
//message Metadata{
//}

message ContractAssert{
     string id = 1;
     string name = 2;
     float amount= 3;
     google.protobuf.Any metadata = 4;
}

message PlanTaskCondition{
     string id = 1;
     string type = 2;
     string name = 3;
     string value = 4;
     string description = 5;
}

message Plan{
     string id = 1;
     string type = 2;
     string state = 3;
     string name = 4;
     string description = 5;
     repeated PlanTaskCondition condition = 6;
     int32 level = 7;
     string contract_type = 8;
     repeated string next_task = 9;
}

message Task{
     string id = 1;
     string type = 2;
     string state = 3;
     string name = 4;
     string description = 5;
     repeated PlanTaskCondition condition = 6;
     int32 level = 7;
     string contract_type = 8;
     repeated string next_task = 9;
}

message ContractComponents{
    repeated Plan plans = 1;
    repeated Task tasks = 2;
}

message Contract {
     string creator_pubkey = 1;
     string create_timestamp = 2;
     string operation = 3;
     ContractAttributes contract_attributes= 4;
     repeated string contract_owners = 5;
     repeated ContractSignature contract_signatures = 6;
     repeated ContractAssert contract_asserts = 7;
     ContractComponents contract_components = 8;
}

message ContractProto {
     string id = 1; //contract Id
     string node_pubkey = 2;
     string main_pubkey = 3;
     string signature = 4;
     repeated string voters = 5;
     string timestamp = 6;
     int32 version = 7;
     Contract contract = 8;
}

